updated navbar to be more resposive to small screens with flex. added media queries. fixed social media links in footer to be centered in footer aligned left. updated links on picture links

--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,32 @@
 	padding: 0;
 	box-sizing: border-box;
 }
+@media only screen {
+    and (min-device-width: 320px) 
+    and (max-device-width: 480px)
+    and (-webkit-min-device-pixel-ratio: 2)
+}
+@media only screen {
+    and (min-device-width: 320px) 
+    and (max-device-width: 568px)
+    and (-webkit-min-device-pixel-ratio: 2)
+}
+@media only screen {
+    and (min-device-width: 375px) 
+    and (max-device-width: 667px) 
+    and (-webkit-min-device-pixel-ratio: 2)
+}
+@media screen {
+    and (min-device-width: 1200px) 
+    and (max-device-width: 1600px) 
+    and (-webkit-min-device-pixel-ratio: 2)
+    and (min-resolution: 192dpi)
+}
+@media only screen {
+    and (min-device-width: 768px) 
+    and (max-device-width: 1024px) 
+    and (-webkit-min-device-pixel-ratio: 1)
+}
 header {
     height: 7rem;
     padding: 1.25rem;
@@ -27,7 +53,7 @@ nav ul {
     margin-left: 8rem;
 }
 nav ul > li {
-    display: inline-block;
+    display: inline-flex;
 }
 nav > ul > li > a {
     padding: .75rem;
@@ -50,6 +76,9 @@ footer {
     background: #00ffff;
     border: 1px solid #262626;
     height: 7rem; 
+}
+footer .social {
+    padding-top: 1.5rem;
 }
 .float-left {
     float: left;
@@ -102,7 +131,6 @@ footer {
     margin-top: 1rem;
     color: whitesmoke;
 }
-
 .link {
     float: left;
     width: 33.33%;
@@ -119,9 +147,9 @@ footer {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    color: white;
+    color: rgb(255, 252, 244);
     text-decoration: none;
-    font-size: 45px;
+    font-size: 3.5vw;
     font-weight: bold;
 }
 .imglnk:after {
